# mkdocs_languages

./: 404.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build-docs.yml
docs/en/: index.md
docs/pt-BR/: index.md  page_one.md  page_two.md
en/: index.html
en/page_one/: index.html
en/page_two/: index.html
pt-BR/: 404.html  index.html  mkdocs.yml  sitemap.xml
pt-BR/page_one/: index.html
pt-BR/page_two/: index.html
pt-BR/search/: search_index.json
search/: search_index.json
