[tool.poetry]
name = "mkdocs_languages"
version = "0.1.0"
description = ""
authors = ["Felipe Guedes <contatofelipeguedes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
